--- a/index.html
+++ b/index.html
@@ -104,5 +104,6 @@
       </div>
     </div>
     <script src="./scripts/script.js"></script>
+    <script src="./scripts/validate.js"></script>
   </body>
 </html>
